AWS/Mini_Projects/medium.com/achinthabandaranaike/lab_2_modules/security_groups/main.tf
resource "aws_security_group" "http_access" {
  vpc_id      = var.vpc_id
  description = "Http connection from 0.0.0.0/0 to 80"
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
  }
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  }
  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
  }
}
